[package]
name = "load"
version = "1.0.0"
edition = "2021"
description = "Munin plugin to graph load, in Rust"
license = "BSD-2-Clause"
authors = [ "Joerg Jaspert <joerg@debian.org>" ]
repository = "https://github.com/Ganneff/munin-load"
keywords = [ "munin", "statistics", "daemon" ]


[dependencies]
munin-plugin = "0.1.3"
anyhow = "1.0.57"
procfs = "^0.12"
